--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-red-contrib-protobuf",
+  "name": "protobuf-fixed",
   "version": "1.0.3",
-  "description": "Protocol buffer encode/decode nodes.",
+  "description": "Protocol buffer encode/decode nodes. (fixed original)",
   "main": "src/index.js",
   "scripts": {
     "test": "mocha \"test/**/*spec.js\"",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/w4tsn/node-red-contrib-protobuf.git"
+    "url": "git+ssh://git@github.com/pesutak/node-red-contrib-protobuf.git"
   },
   "keywords": [
     "node-red",
@@ -20,9 +20,9 @@
   "author": "Alexander Wellbrock <a.wellbrock@mailbox.org>",
   "license": "BSD-3",
   "bugs": {
-    "url": "https://github.com/w4tsn/node-red-contrib-protobuf/issues"
+    "url": "https://github.com/pesutak/node-red-contrib-protobuf/issues"
   },
-  "homepage": "https://github.com/w4tsn/node-red-contrib-protobuf#README",
+  "homepage": "https://github.com/pesutak/node-red-contrib-protobuf#README",
   "node-red": {
     "nodes": {
       "encode": "src/nodes/encode.js",
